feat(auth): migrate roles to ElementCollection, fix login casting and refactor services